css & html styling bugs squashed

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -36,7 +36,7 @@ body {
 }
 
 #messages {
-  height: calc(80vh - 80px);
+  height: calc(100vh - 100px);
   overflow-x: hidden;
   overflow-y: scroll;
 }
